# iddawc

./: .gitignore  .travis.yml  API.md  API_8md.html  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_8md.html  annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_r.html  graph_legend.html  group__const.html  group__core.html  group__properties.html  group__run.html  group__struct.html  iddawc-cfg_8h.html  iddawc-cfg_8h_source.html  iddawc_8c.html  iddawc_8c__incl.map  iddawc_8c__incl.md5  iddawc_8h.html  iddawc_8h__dep__incl.map  iddawc_8h__dep__incl.md5  iddawc_8h__incl.map  (+7 more)
.github/workflows/: ccpp.yml  codeql-analysis.yml
cmake-modules/: FindRhonabwy.cmake  FindUlfius.cmake  IddawcConfig.cmake.in
doc/: doxygen.cfg
doc/html/: README_8md.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__const.html  group__core.html  group__glewlwyd.html  group__properties.html  group__run.html  group__struct.html  iddawc-cfg_8h.html  iddawc-cfg_8h_source.html  iddawc_8c.html  iddawc_8h.html  iddawc_8h_source.html  index.html  menudata.js  modules.html  struct__i__session.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  searchdata.js  variables_1.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
examples/: .gitignore  Makefile  README.md  client_registration.c  facebook_example.c  github_example.c  gitlab_example.c  glewlwyd_oidc_id_token_code.c  google_example.c  microsoft_example.c  token_introspection.c  token_revocation.c
include/: iddawc-cfg.h  iddawc-cfg.h.in  iddawc.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+10 more)
src/: Makefile  iddawc.c  libiddawc.so.0.9.4  libiddawc.so.0.9.5
test/: .gitignore  Makefile  api_request.c  ciba.c  core  core.c  device.c  dpop.c  flow  flow.c  id_token  id_token.c  implicit  implicit.c  introspection  introspection.c  load_config  load_config.c  load_userinfo  load_userinfo.c  oauth2.c  par.c  rar.c  registration  registration.c  revocation  revocation.c  session.c  token  token.c
test/cert/: create-cert.sh  template-ca.cfg  template-ca2.cfg  template-user.cfg
tools/idwcc/: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  idwcc.1  idwcc.c  keys.jwks  static_compressed_inmemory_website_callback.c  static_compressed_inmemory_website_callback.h  valgrind.txt
tools/idwcc/static/: callback.html  index.html
tools/idwcc/static/js/: iddwc.js
tools/idwcc/webapp/: index.html
tools/idwcc/webapp/css/: idwcc.css
tools/idwcc/webapp/js/: iddwc.js
